correct get() method